/*
 * $Id: ChangeLog,v 1.6529 2009/08/05 10:55:53 marchuet Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2009-08-05 12:57 UTC+0100 Miguel Angel Marchuet <soporte-2@dsgsoftware.com>
  * source\rtl\filenet.c
    ! fixed and optimized reuse file handle under windows 2008 server platforms working as client.
  * source\rtl\hbip.c
    % minor optimizations.
  * tests\netrdd.prg
    * Added test to get best buffer size for tcp transmissions.

2009-08-04 11:46 UTC+0100 Miguel Angel Marchuet <soporte-2@dsgsoftware.com>
  * include\hbapifs.h
  * source\rdd\bmdbfcdx\redbfcdx1.c
  * source\rtl\filenet.c
  * source\rtl\hbip.c
  * utils\hbfilere\hbfilere.c
    + Added local buffer to increase speed on SET OPTIMIZE ON filters.
    + Added NET_SETBUFFERSIZE( nBufferSize ) -> nBufferSize to change size of buffer
      on client machine.
    ! Fixed handle file buffers, it was merging local and remote files with the same
      name, path and handle.
  + doc\filere.txt
    + Added File Remote API documentation.

2009-08-03 08:44 UTC-0300 Luiz Rafael Culik <luiz at xharbour.com.br
  * source/ct/files.c
    ! fixed declaration to compile under linux
    
2009-08-01 14:10 UTC-0300 Eduardo Fernandes <modalsist@yahoo.com.br>
  * utils\hbmake\hbmake.prg
    * fix to parse "=" into /alternatename link flag properly, for PellesC v.5x and later.
      note(1): you must recreate your script file by use hbmake <filename.pc> -e
      note(2): now the makefile.lnk file is erased after link process.

2009-07-31 10:25 UTC-0300 Eduardo Fernandes <modalsist@yahoo.com.br>
  * utils\hbmake\hbmake.prg
    * added /alternatename flag to link under Pelles v5.x

2009-07-31 09:40 UTC-0300 Eduardo Fernandes <modalsist@yahoo.com.br>
  * mdir.bat
    * added redbfcdx, redbffpt and use_dll on clean session

  * makefile.pc