@@ -1,14 +1,21 @@
 #
-# $Id: Makefile,v 1.4 2007/02/27 15:59:42 druzus Exp $
+# $Id: Makefile,v 1.1 2009/07/29 17:15:54 marchuet Exp $
 #
 
 ROOT = ../../
 
 C_SOURCES= \
 
-C_MAIN=filesvr.c
+C_MAIN=hbfilere.c
 
 LIBS=\
 	common \
+	vm \
+	rtl \
+	rdd \
+	lang \
+	codepage \
+	ct \
+	macro \
 
 include $(TOP)$(ROOT)config/bin.cf
